--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,4 +92,9 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
+    //Automated Testing
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+
 }
