--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    repositories {
+        flatDir {dirs 'libs'}
+    }
 }
 
 dependencies {
-
+    compile(name: 'eSewaSdk', ext: 'aar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
