--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     compile(name: 'eSewaSdk', ext: 'aar')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
